update time to birthday and blessword

--- a/output.css
+++ b/output.css
@@ -1983,6 +1983,12 @@
       line-height: var(--tw-leading, var(--text-7xl--line-height));
     }
   }
+  .lg\:text-xl {
+    @media (width >= 64rem) {
+      font-size: var(--text-xl);
+      line-height: var(--tw-leading, var(--text-xl--line-height));
+    }
+  }
 }
 @property --tw-translate-x {
   syntax: "*";
