--- a/output.css
+++ b/output.css
@@ -357,6 +357,9 @@
       max-width: 96rem !important;
     }
   }
+  .m-4 {
+    margin: calc(var(--spacing) * 4);
+  }
   .mx-auto {
     margin-inline: auto;
   }
@@ -453,9 +456,6 @@
   .h-auto {
     height: auto;
   }
-  .h-full {
-    height: 100%;
-  }
   .h-screen {
     height: 100vh;
   }
@@ -477,17 +477,11 @@
   .w-20 {
     width: calc(var(--spacing) * 20);
   }
-  .w-auto {
-    width: auto;
-  }
   .w-full {
     width: 100%;
   }
   .w-screen {
     width: 100vw;
-  }
-  .max-w-full {
-    max-width: 100%;
   }
   .max-w-none {
     max-width: none;
@@ -1584,10 +1578,6 @@
     --tw-shadow: 0 1px 3px 0 var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 1px 2px -1px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
   }
-  .shadow-lg {
-    --tw-shadow: 0 10px 15px -3px var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 4px 6px -4px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
-    box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
-  }
   .ring {
     --tw-ring-shadow: var(--tw-ring-inset,) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color, currentColor);
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
@@ -1871,24 +1861,19 @@
   .transform-view {
     transform-box: view-box;
   }
-  .sm\:h-20 {
+  .sm\:w-1\/2 {
     @media (width >= 40rem) {
-      height: calc(var(--spacing) * 20);
+      width: calc(1/2 * 100%);
     }
   }
-  .sm\:w-1\/3 {
+  .sm\:flex-col {
     @media (width >= 40rem) {
-      width: calc(1/3 * 100%);
+      flex-direction: column;
     }
   }
-  .sm\:w-20 {
+  .sm\:flex-row {
     @media (width >= 40rem) {
-      width: calc(var(--spacing) * 20);
-    }
-  }
-  .md\:h-20 {
-    @media (width >= 48rem) {
-      height: calc(var(--spacing) * 20);
+      flex-direction: row;
     }
   }
   .md\:h-30 {
@@ -1896,19 +1881,34 @@
       height: calc(var(--spacing) * 30);
     }
   }
-  .md\:w-1\/4 {
+  .md\:w-1\/3 {
     @media (width >= 48rem) {
-      width: calc(1/4 * 100%);
-    }
-  }
-  .md\:w-20 {
-    @media (width >= 48rem) {
-      width: calc(var(--spacing) * 20);
+      width: calc(1/3 * 100%);
     }
   }
   .md\:w-30 {
     @media (width >= 48rem) {
       width: calc(var(--spacing) * 30);
+    }
+  }
+  .md\:flex-col {
+    @media (width >= 48rem) {
+      flex-direction: column;
+    }
+  }
+  .md\:flex-row {
+    @media (width >= 48rem) {
+      flex-direction: row;
+    }
+  }
+  .md\:items-start {
+    @media (width >= 48rem) {
+      align-items: flex-start;
+    }
+  }
+  .md\:justify-items-start {
+    @media (width >= 48rem) {
+      justify-items: start;
     }
   }
   .md\:text-2xl {
@@ -1934,14 +1934,19 @@
       height: calc(var(--spacing) * 45);
     }
   }
-  .lg\:w-1\/6 {
+  .lg\:w-1\/4 {
     @media (width >= 64rem) {
-      width: calc(1/6 * 100%);
+      width: calc(1/4 * 100%);
     }
   }
   .lg\:w-45 {
     @media (width >= 64rem) {
       width: calc(var(--spacing) * 45);
+    }
+  }
+  .lg\:flex-row {
+    @media (width >= 64rem) {
+      flex-direction: row;
     }
   }
   .lg\:text-4xl {
@@ -1960,11 +1965,6 @@
     @media (width >= 64rem) {
       font-size: var(--text-xl);
       line-height: var(--tw-leading, var(--text-xl--line-height));
-    }
-  }
-  .xl\:w-1\/8 {
-    @media (width >= 80rem) {
-      width: calc(1/8 * 100%);
     }
   }
 }
